--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
     <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="custom/css-custom.css">
+    <link rel="stylesheet" href="custom/css-custom.css" />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+    </style>
   </head>
-  <body>
+  <body class="body-home">
     <nav class="navbar navbar-expand-lg navbar-light navbar-custom">
       <div class="container-fluid ps-5">
         <a class="navbar-brand" href="#">
