--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
     </style>
   </head>
   <body class="body-home">
+    <div class="dekor1"></div>
     <nav class="navbar navbar-expand-lg navbar-light navbar-custom">
-      <div class="container-fluid ps-5  ">
-        <a class="navbar-brand" href="#">
+      <div class="container-fluid ps-5">
+        <a class="navbar-brand ps-5" href="#" id="brand">
           <img
             src="/img/logo.png"
             alt=""
-            width="30"
-            height="30"
+            width="25"
+            height="25"
             class="d-inline-block align-text-top"
           />
           Bloodbags
