--- a/index.html
+++ b/index.html
@@ -25,10 +25,19 @@
           />
           Bloodbags
         </a>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <div class="collapse navbar-collapse ms-15 mt-2" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto" >
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active-custom li-nav-custom" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item ms-5">
+              <a class="nav-link li-nav-custom" aria-current="page" href="#">About Us</a>
+            </li>
+            <li class="nav-item ms-5">
+              <a class="nav-link li-nav-custom" aria-current="page" href="#">Services</a>
+            </li>
+            <li class="nav-item ms-5">
+              <a class="nav-link li-nav-custom" aria-current="page" href="#">FAQ</a>
             </li>
           </ul>
         </div>
