--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
           />
           Bloodbags
         </a>
-        <div class="collapse navbar-collapse ms-15 mt-2" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto" >
+        <div class="collapse navbar-collapse mt-2" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto ms-15" >
             <li class="nav-item">
               <a class="nav-link active-custom li-nav-custom" aria-current="page" href="#">Home</a>
             </li>
