--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           Bloodbags
         </a>
         <div class="collapse navbar-collapse mt-2" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto ms-15" >
+          <ul class="navbar-nav me-auto" >
             <li class="nav-item">
               <a class="nav-link active-custom li-nav-custom" aria-current="page" href="#">Home</a>
             </li>
