--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="custom/css-custom.css" />
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
@@ -14,8 +19,8 @@
   <body class="body-home">
     <div class="dekor1"></div>
     <nav class="navbar navbar-expand-lg navbar-light navbar-custom">
-      <div class="container-fluid ps-5">
-        <a class="navbar-brand ps-5" href="#" id="brand">
+      <div class="container-fluid">
+        <a class="navbar-brand ms-10" href="#" id="brand">
           <img
             src="/img/logo.png"
             alt=""
@@ -25,24 +30,50 @@
           />
           Bloodbags
         </a>
-        <div class="collapse navbar-collapse mt-2" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto" >
-            <li class="nav-item">
-              <a class="nav-link active-custom li-nav-custom" aria-current="page" href="#">Home</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto ms-15 mt-2">
+            <li class="nav-item ms-5">
+              <a
+                class="nav-link active-custom li-nav-custom"
+                aria-current="page"
+                href="#"
+                >Home</a
+              >
             </li>
             <li class="nav-item ms-5">
-              <a class="nav-link li-nav-custom" aria-current="page" href="#">About Us</a>
+              <a class="nav-link li-nav-custom" aria-current="page" href="#"
+                >About Us</a
+              >
             </li>
             <li class="nav-item ms-5">
-              <a class="nav-link li-nav-custom" aria-current="page" href="#">Services</a>
+              <a class="nav-link li-nav-custom" aria-current="page" href="#"
+                >Services</a
+              >
             </li>
             <li class="nav-item ms-5">
-              <a class="nav-link li-nav-custom" aria-current="page" href="#">FAQ</a>
+              <a class="nav-link li-nav-custom" aria-current="page" href="#"
+                >FAQ</a
+              >
             </li>
           </ul>
         </div>
       </div>
     </nav>
-    <script src="js/jquery.min.js"></script>
+    <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"
+  ></script>
   </body>
 </html>
