--- a/index.html
+++ b/index.html
@@ -38,15 +38,17 @@
               <a class="nav-link li-nav-custom" aria-current="page" href="#">FAQ</a>
             </li>
             <form class="d-flex gayaNav">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                data-bs-toggle="dropdown" aria-expanded="false">
-                EN
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <li><a class="dropdown-item" href="#">English</a></li>
-                <li><a class="dropdown-item" href="#">Indonesia</a></li>
-              </ul>
-              <button class="btn btn-danger mx-4" style="background-color: #a30016;" >Contact Us</button>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                  data-bs-toggle="dropdown" aria-expanded="false">
+                  EN
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <li><a class="dropdown-item" href="#">English</a></li>
+                  <li><a class="dropdown-item" href="#">Indonesia</a></li>
+                </ul>
+              </li>
+              <button class="btn btn-danger mx-4" style="background-color: #a30016;">Contact Us</button>
             </form>
           </ul>
         </div>
@@ -76,7 +78,7 @@
     </div>
   </header>
   <section>
-    
+
   </section>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
