--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <div class="header-description">
             <h5 class="pb-4" style="color: #a30016; font-weight: bolder;">Welcome!</h5>
             <h1 class="pb-4">"Give and Save, Let's Donate Blood"</h1>
-            <p class="lead text-muted pb-4">
+            <p class="text-muted pb-4">
               BloodBags will provide services related to blood donation and also the availability of blood bags in the
               Yogyakarta area.
             </p>
@@ -77,8 +77,21 @@
       </div>
     </div>
   </header>
-  <section>
-
+  <section class="advantage">
+    <div class="container">
+      <h1 style="font-weight: bold;">Why Should Bloodbags</h1>
+      <p class="text-muted">Because it was built specifically to make it easier for donors to donate blood and help <br>
+        people who need blood get information about the availability of blood.</p>
+      <div class="row">
+        <div class="left-side col-12 col-md-6">
+          <img src="img/appblood.png" alt="mobile-blood">
+        </div>
+        <div class="right-side col-12 col-md-6">
+          <h3>Featured Advantages</h3>
+          <p>With this, we want to make it easier for the community with the following features:</p>
+        </div>
+      </div>
+    </div>
   </section>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
