--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <img src="img/appblood.png" alt="mobile-blood">
           </div>
           <div class="right-side col-12 col-md-6">
-            <h3>Featured Advantages</h3>
+            <h3 class="mt-5">Featured Advantages</h3>
             <p class="text-muted">With this, we want to make it easier for the community with the following features :
             </p>
             <ul class="custom-list">
