--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <a class="nav-link active-custom li-nav-custom" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item ms-5">
-              <a class="nav-link li-nav-custom" aria-current="page" href="#">About Us</a>
+              <a class="nav-link li-nav-custom" aria-current="page" href="about.html">About Us</a>
             </li>
             <li class="nav-item ms-5">
               <a class="nav-link li-nav-custom" aria-current="page" href="#">Services</a>
