--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
                 <div class="collapse navbar-collapse container" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto ms-10 mt-2">
                         <li class="nav-item ms-5">
-                            <a class="nav-link li-nav-custom" aria-current="page" href="#">Home</a>
+                            <a class="nav-link li-nav-custom" aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item ms-5">
                             <a class="nav-link active-custom li-nav-custom" aria-current="page" href="#">About Us</a>
