function navbar succed

--- a/about.html
+++ b/about.html
@@ -24,7 +24,11 @@
                     <img src="/img/logo.png" alt="" width="25" height="25" class="d-inline-block align-text-top" />
                     Bloodbags
                 </a>
-                <div class="collapse navbar-collapse container" id="navbarSupportedContent">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                <div class="collapse navbar-collapse container" id="navbarNav">
                     <ul class="navbar-nav me-auto ms-10 mt-2">
                         <li class="nav-item ms-5">
                             <a class="nav-link li-nav-custom" aria-current="page" href="index.html">Home</a>
@@ -96,22 +100,22 @@
         <div class="container">
             <h2 class="fw-bold pb-4 mb-4" style="text-align: center;">Misi Kami</h2>
             <div class="row">
-                <div class="col-md-3 mx-5">
-                    <img class="card-img-top" src="img/konsul.png" alt="Sosial">
+                <div class="col-md-4 px-5">
+                    <img class="card-img-top" src="img/dokter.png" height="250vh" alt="Sosial">
                     <h3 class="my-3" style="text-align: center;">Sosial</h3>
                     <p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                         Modi, id rerum suscipit consectetur aperiam quo repellat sit fuga voluptatum doloremque,
                         et officiis voluptate dicta blanditiis animi quaerat hic amet quam!</p>
                 </div>
-                <div class="col-md-3 mx-5">
-                    <img class="card-img-top" src="img/konsul.png" alt="Teknologi">
+                <div class="col-md-4 px-5">
+                    <img class="card-img-top" src="img/konsul.png" height="250vh" alt="Teknologi">
                     <h3 class="my-3" style="text-align: center;">Teknologi</h3>
                     <p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                         Modi, id rerum suscipit consectetur aperiam quo repellat sit fuga voluptatum doloremque,
                         et officiis voluptate dicta blanditiis animi quaerat hic amet quam!</p>
                 </div>
-                <div class="col-md-3 mx-5">
-                    <img class="card-img-top" src="img/konsul.png" alt="Ekonomi">
+                <div class="col-md-4 px-5">
+                    <img class="card-img-top" src="img/appblood.png" height="250vh" alt="Ekonomi">
                     <h3 class="my-3" style="text-align: center;">Ekonomi</h3>
                     <p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                         Modi, id rerum suscipit consectetur aperiam quo repellat sit fuga voluptatum doloremque,
