--- a/about.html
+++ b/about.html
@@ -83,14 +83,12 @@
         <div class="container">
             <div class="row mt-5">
                 <div class="left-side col-md-6 mt-3 d-flex justify-content-center">
-                    <img src="img/konsul.png" alt="mobile-blood">
+                    <img src="img/konsul.png" alt="mobile-blood" width="80%" height="100%">
                 </div>
                 <div class="right-side mt-3 col-md-6">
                     <h2 class="fw-bold pb-4">Visi Kami</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vitae, a in lobortis
-                            vitae lacus.
-                            Pharetra gravida augue scelerisque scelerisque habitasse mauris, etiam amet sit.
-                            Tortor tellus elementum risus vitae aliquet. Nibh neque, eget sit diam.
+                        <p> Menjadi aplikasi yang mampu memberikan layanan terbaik 
+                            kepada masyarakat agar tertarik donor darah dan menjangkau seluruh pasien yang membutuhkan kantong darah.
                         </p>
                 </div>
             </div>
@@ -101,25 +99,22 @@
             <h2 class="fw-bold pb-4 mb-4" style="text-align: center;">Misi Kami</h2>
             <div class="row">
                 <div class="col-md-4 px-5">
-                    <img class="card-img-top" src="img/dokter.png" height="250vh" alt="Sosial">
+                    <img class="card-img-top" src="img/sosial.png" alt="Sosial">
                     <h3 class="my-3" style="text-align: center;">Sosial</h3>
-                    <p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        Modi, id rerum suscipit consectetur aperiam quo repellat sit fuga voluptatum doloremque,
-                        et officiis voluptate dicta blanditiis animi quaerat hic amet quam!</p>
+                    <p style="text-align: center;">
+                        Menurunkan angka kematian yang disebabkan oleh kekurangan kantong darah. 
+                        </p>
                 </div>
                 <div class="col-md-4 px-5">
-                    <img class="card-img-top" src="img/konsul.png" height="250vh" alt="Teknologi">
+                    <img class="card-img-top"  src="img/tech.png"  alt="Teknologi">
                     <h3 class="my-3" style="text-align: center;">Teknologi</h3>
-                    <p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        Modi, id rerum suscipit consectetur aperiam quo repellat sit fuga voluptatum doloremque,
-                        et officiis voluptate dicta blanditiis animi quaerat hic amet quam!</p>
+                    <p style="text-align: center;">Aplikasi Bloodbags dapat menjembatani masyarakat
+                         untuk mendapatkan kantong darah dengan cepat. </p>
                 </div>
                 <div class="col-md-4 px-5">
-                    <img class="card-img-top" src="img/appblood.png" height="250vh" alt="Ekonomi">
+                    <img class="card-img-top" src="img/ekonomi.png" alt="Ekonomi">
                     <h3 class="my-3" style="text-align: center;">Ekonomi</h3>
-                    <p style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                        Modi, id rerum suscipit consectetur aperiam quo repellat sit fuga voluptatum doloremque,
-                        et officiis voluptate dicta blanditiis animi quaerat hic amet quam!</p>
+                    <p style="text-align: center;">Meningkatkan sumber daya manusia dan membuka lapangan kerja baru.</p>
                 </div>
             </div>
         </div>
